--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "logic/lib/forge-std"]
 	path = logic/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "logic/lib/openzeppelin-contracts-upgradeable"]
+	path = logic/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "logic/lib/foundry-devops"]
+	path = logic/lib/foundry-devops
+	url = https://github.com/Cyfrin/foundry-devops
